[package]
name = "fabro-graphviz"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Graphviz DOT parser and typed graph data model"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
fabro-types = { path = "../fabro-types" }
nom = "7"
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
