[package]
name = "fabro-interview"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Human-in-the-loop interviewer traits and implementations"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
dialoguer.workspace = true
fabro-util = { path = "../fabro-util" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
